--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,10 @@
-/* You'll probably want to add some styles here */
+/*author: Eli Jackson Oct 18,2015*/
 #container {
 	height:800px;
+}
+h1{
+	text-align: center;
+}
+#killed{
+	color:red;
 }
